[package]
name = "fte_module_modules"
version = "0.0.1"
authors = ["Ahbong Chang"]

[dependencies]
clap = "2.20"
env_logger = "0.3"
futures = "0.1"
log = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.fte_module]
path = "../module"

[dependencies.fte_rwlock_module]
path = "../rwlock_module"
